--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "gun-test",
   "version": "1.0.0",
   "description": "npm install gun && cd node_modules/gun && npm start",
-  "main": "index.html",
+  "main": "index.js",
   "dependencies": {
+    "express": "^4.17.1",
     "gun": "^0.2020.520",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "node-static": "^0.7.11",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "node --prof node_modules/gun/examples/http.js"
+    "start-server": "node --prof node_modules/gun/examples/http.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC"
